# world-analogue-photography-museum

./: .gitignore  README.md  main.py  pyproject.toml  sync-thumbnails-to-r2.md  vercel.json
docs/: image_sourcing_notes.md
scripts/: _audit_brands.py  audit_camera_images.py  audit_data.py  cleanup_duplicate_flickr.py  cleanup_images_and_brands.py  cleanup_orphan_images.py  collect_all.py  consolidate_camera_images.py  download_brand_logos.py  download_images.py  enrich_camera_types.py  enrich_descriptions.py  enrich_descriptions_web.py  enrich_images_multi.py  enrich_prices.py  enrich_prices_llm.py  enrich_years.py  fix_camera_dates.py  fix_watermarks.py  generate_contact_sheet.py  generate_descriptions.py  generate_thumbnails.py  prepare_brands_data.py  prepare_camera_pages.py  prepare_landing_data.py  process_images_iopaint.py  process_images_iopaint_no_resize.py  process_images_precise_watermark.py  process_images_rembg.py  process_images_sd.py  process_images_sdxl.py  process_images_test_pipeline.py  recover_extra_images.py  remove_backgrounds.py  reorganize_images.py  run_ebay_scrape.py  scan_watermarks.py  scrape_brand_logos.py  scrape_lomography.py  search_flickr_images.py  (+5 more)
src/collectors/: camerawiki.py  chinese_cameras.py  chinesecamera.py  collectiblend.py  flickr.py  wikidata.py  wikipedia.py
src/images/: background.py  camerawiki_search.py  download.py  flickr_search.py  google_search.py  manufacturer_museums.py  museum_search.py  watermark.py  web_search.py
src/models/: camera.py
src/normalization/: manufacturers.py  merge.py
src/patterns/: digital.py
src/pricing/: collectiblend_prices.py  ebay_prices.py  ebay_scrape.py  enrich.py  inflation.py  launch_prices.py
src/utils/: data_io.py  http.py
tests/: conftest.py  test_digital_patterns.py  test_infer_film_format.py  test_is_digital.py  test_is_non_retail.py  test_make_key.py  test_manufacturers.py  test_merge_entities.py  test_merge_record.py  test_normalize_name.py
web/: .env.production  .gitignore  next.config.ts  package-lock.json  vercel.json
web/app/: error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  (+2 more)
(+35 files in other folders)
